[OI] Fix map template and tasks file

--- a/tasks/resource/map.yml
+++ b/tasks/resource/map.yml
@@ -1,9 +1,10 @@
 ---
 - name: Validate nginx_map_string
   fail: msg="Invalid map string!! Cannot be an empty string"
-  when: nginx_map_string == '' and config_nginx_map
+  when: item.string == ''
+  with_items: nginx_map
 
 - name: Create nginx map config
-  template: src=conf.d/map.j2 dest={{ nginx_conf_dir }}/conf.d/{{ nginx_map_name }}-map.conf owner=root group=root mode=0644 state=present
-  when: config_nginx_map
+  template: src=../../templates/conf.d/map.j2 dest={{ nginx_conf_dir }}/conf.d/{{ item.name }}-map.conf owner=root group=root mode=0644
+  with_items: nginx_map
   notify: Restart nginx
