--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -129,11 +129,24 @@ nginx_geo_proxy_recursive: false
 
 ### START Map ###
 config_nginx_map:     false
-nginx_map_name:
-nginx_map_string:
-nginx_map_mappings:   {}
-nginx_map_default:    ''
-nginx_map_hostnames:  false
+nginx_map:
+  - name: client_network
+    string:     $http_host
+    mappings:   {}
+    default:    ''
+    hostnames:  false
+
+## Example: nginx_map
+## config_nginx_map:     true 
+## nginx_map:
+##   - name: client_network
+##     hostnames: true
+##     default: 'ny-pool-1'
+##     string: $http_host
+##     mappings:
+##       '*.nyc.example.com': 'ny-pool-1'
+##       '*.sf.example.com': 'sf-pool-1'
+
 ### END Map ###
 
 ### START Mailhost ###
@@ -231,9 +244,9 @@ nginx_uwsgi_params:          "{{ nginx_conf_dir }}/uwsgi_params"
 
 config_nginx_location:  false
 nginx_location:
-  - vhost:                  myvhost
+  - location:              /hello/world   
+    vhost:                  myvhost.internal
     internal:              false
-    location:              /hello/world   
     www_root:              /var/www 
     autoindex:           
     index_files:           [ 'index.html', 'index.htm', 'index.php' ]
@@ -283,3 +296,100 @@ nginx_location:
     mp4:                   false
     flv:                   false
 ### END Location ###
+
+
+### START Vhost ###
+nginx_vhost:
+  - vhost:                         myvhost.internal
+    enable:                        true
+    listen_ip:                     '*'
+    listen_port:                   '80'
+    listen_options:                
+    location_allow:                []
+    location_deny:                 []
+    ipv6_enable:                   false
+    ipv6_listen_ip:                '::'
+    ipv6_listen_port:              '80'
+    ipv6_listen_options:           'default ipv6only=on'
+    add_header:                    
+    ssl:                           false
+    ssl_listen_option:             true
+    ssl_cert:                      
+    ssl_client_cert:               
+    ssl_dhparam:                   
+    ssl_key:                       
+    ssl_port:                      '443'
+    ssl_protocols:                 'TLSv1 TLSv1.1 TLSv1.2'
+    ssl_buffer_size:               
+    ssl_ciphers:                   'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA'
+    ssl_cache:                     'shared:SSL:10m'
+    ssl_crl:                       
+    ssl_stapling:                  false
+    ssl_stapling_file:             
+    ssl_stapling_responder:        
+    ssl_stapling_verify:           false
+    ssl_session_timeout:           '5m'
+    ssl_trusted_cert:              
+    spdy:                          "{{ nginx_spdy }}"
+    proxy_pass:                    
+    proxy_redirect:                
+    proxy_read_timeout:            "{{ nginx_proxy_read_timeout }}"
+    proxy_connect_timeout:         "{{ nginx_proxy_connect_timeout }}"
+    proxy_set_header:              []
+    proxy_cache:                   false
+    proxy_cache_key:               
+    proxy_cache_use_stale:         
+    proxy_cache_valid:             false
+    proxy_method:                  
+    proxy_set_body:                
+    resolver:                      []
+    fastcgi_pass:                  
+    fastcgi_params_file:           "{{ nginx_conf_dir }}/fastcgi_params"
+    fastcgi_script:                
+    uwsgi_pass:                    
+    uwsgi_params_file:             "{{ nginx_conf_dir }}/uwsgi_params"
+    index_files:                   [ 'index.html', 'index.htm', 'index.php']
+    autoindex:                     
+    server_name:                   [myvhost.internal]
+    www_root:                      
+    rewrite_www_to_non_www:        false
+    rewrite_to_https:              
+    location_custom_cfg:           
+    location_cfg_prepend:          
+    location_cfg_append:           
+    location_custom_cfg_prepend:   
+    location_custom_cfg_append:    
+    try_files:                     
+    auth_basic:                    
+    auth_basic_user_file:          
+    client_body_timeout:           
+    client_header_timeout:         
+    client_max_body_size:          
+    raw_prepend:                   
+    raw_append:                    
+    location_raw_prepend:          
+    location_raw_append:           
+    vhost_cfg_prepend:             
+    vhost_cfg_append:              
+    vhost_cfg_ssl_prepend:         
+    vhost_cfg_ssl_append:          
+    include_files:                 
+    access_log:                    
+    error_log:                     
+    format_log:                    'combined'
+    passenger_cgi_param:           
+    passenger_set_header:          
+    passenger_env_var:             
+    log_by_lua:                    
+    log_by_lua_file:               
+    use_default_location:          true
+    rewrite_rules:                 []
+    string_mappings:               {}
+    geo_mappings:                  {}
+    gzip_types:                    
+    owner:                         "{{ nginx_global_owner }}"
+    group:                         "{{ nginx_global_group }}"
+    mode:                          "{{ nginx_global_mode }}"
+    maintenance:                   false
+    maintenance_value:             'return 503'
+### END Vhost ###
