--- a/tasks/resource/mailhost.yml
+++ b/tasks/resource/mailhost.yml
@@ -15,11 +15,11 @@
   file: path={{ _fragments_dir }} state=directory
 
 - name: Create nginx mailhost header config
-  template: src=conf.d/mailhost.j2 dest={{ _fragments_dir }}/{{ nginx_mailhost_name }}-header owner=root group=root mode=0644 state=present
+  template: src=conf.d/mailhost.j2 dest={{ _fragments_dir }}/{{ nginx_mailhost_name }}-header owner=root group=root mode=0644
   when: config_nginx_mailhost
 
 - name: Create nginx mailhost ssl config
-  template: src=conf.d/mailhost_ssl.j2 dest={{ _fragments_dir }}/{{ nginx_mailhost_name }}-ssl owner=root group=root mode=0644 state=present
+  template: src=conf.d/mailhost_ssl.j2 dest={{ _fragments_dir }}/{{ nginx_mailhost_name }}-ssl owner=root group=root mode=0644
   when: config_nginx_mailhost
   notify: Restart nginx
 
