--- a/tasks/resource/geo.yml
+++ b/tasks/resource/geo.yml
@@ -1,6 +1,7 @@
 ---
 
 - name: Create nginx geo config
-  template: src=conf.d/geo.j2 dest={{ nginx_conf_dir }}/conf.d/{{ nginx_geo_name }}-geo.conf owner=root group=root mode=0644 state=present
+  template: src=../../templates/conf.d/geo.j2 dest={{ nginx_conf_dir }}/conf.d/{{ item.name }}-geo.conf owner=root group=root mode=0644 
   when: config_nginx_geo
+  with_items: nginx_geo
   notify: Restart nginx
