--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,7 +22,6 @@ nginx_sites_available_group:  "{{ nginx_root_group }}"
 nginx_sites_available_mode:   '0644'
 nginx_super_user:             true
 nginx_confd_purge:            false
-nginx_log_format:
 nginx_vhost_purge:            false
 
 
@@ -55,7 +54,7 @@ nginx_mail:                            false
 nginx_multi_accept:                    'off'
 nginx_names_hash_bucket_size:          '64'
 nginx_names_hash_max_size:             '512'
-nginx_nginx_cfg_prepend:               false
+nginx_nginx_cfg_prepend:               {}
 nginx_proxy_buffers:                   '32 4k'
 nginx_proxy_buffer_size:               '8k'
 nginx_proxy_cache_inactive:            '20m'
@@ -65,7 +64,7 @@ nginx_proxy_cache_max_size:            '500m'
 nginx_proxy_cache_path:                false
 nginx_proxy_connect_timeout:           '90'
 nginx_proxy_headers_hash_bucket_size:  '64'
-nginx_proxy_http_version:
+nginx_proxy_http_version:              1.1
 nginx_proxy_read_timeout:              '90'
 nginx_proxy_redirect:                  'off'
 nginx_proxy_send_timeout:              '90'
@@ -84,18 +83,13 @@ nginx_worker_processes:                '1'
 nginx_worker_rlimit_nofile:            '1024'
 ### END Nginx Configuration ###
 
-### START Module/App Configuration ###
-
-# Primary Templates
-nginx_conf_template:                    'conf.d/nginx.conf.j2'
-nginx_proxy_conf_template:              'conf.d/nginx.conf.j2'
-### END Module/App Configuration ###
 
 ### START Package Configuration ###
 nginx_package_name:                     nginx
 nginx_package_source:                   nginx
 nginx_package_flavor:
 ### END Package Configuration ###
+
 
 ### START Service Configuation ###
 nginx_configtest_enable:                false
@@ -106,14 +100,6 @@ nginx_service_restart:                  '/etc/init.d/nginx configtest && /etc/in
 nginx_service_name:                     nginx
 ### END Service Configuration ###
 
-### START Hiera Lookups ###
-nginx_geo_mappings:                     {}
-nginx_string_mappings:                  {}
-nginx_nginx_locations:                  {}
-nginx_nginx_mailhosts:                  {}
-nginx_nginx_upstreams:                  {}
-nginx_nginx_vhosts:                     {}
-nginx_nginx_vhosts_defaults:            {}
 
 ### START Geo ###
 config_nginx_geo:          false
